5 corrigé, 6 et 7 + bonus
