# src/dto/creategame.dto.ts
@@ -1,4 +1,0 @@
-export interface CreateGameDTO {
-    title: string;
-    consoleId: number;
-  }
