# src/dto/review.dto.ts
@@ -6,3 +6,14 @@ export interface ReviewDTO {
     rating: number;
     review_text?: string;
 }
+
+export interface AddReviewDTO {
+    game_id: number;
+    rating: number;
+    review_text?: string;
+}
+
+export interface EditReviewDTO {
+    rating: number;
+    review_text?: string;
+}
