# src/models/review.model.ts
@@ -41,6 +41,10 @@ Review.init(
         min: 1,  
         max: 10,
       }
+    },
+    review_text: {
+      type: DataTypes.STRING,
+      allowNull: false,
     }
   },
   {
@@ -48,4 +52,5 @@ Review.init(
     tableName: "reviews",
   }
 );
+
 Review.belongsTo(Game, { foreignKey: "game_id", as: "game"});
